--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -27,7 +27,7 @@ jobs:
 
     strategy:
       matrix:
-        postgres_version: ["17.5"]
+        postgres_version: ["16"]
         go_version: ["1.22"]
 
     services:
@@ -103,7 +103,7 @@ jobs:
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
-        if: matrix.postgres_version == 17.5 && matrix.go_version == '1.22'
+        if: matrix.postgres_version == '16' && matrix.go_version == '1.22'
         with:
           name: coverage-reports
           path: |
@@ -129,7 +129,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:17.5-alpine
+        image: postgres:16-alpine
         env:
           POSTGRES_PASSWORD: testpass # pragma: allowlist secret
           POSTGRES_USER: testuser
@@ -186,17 +186,6 @@ jobs:
           POSTGRES_E2E_TEST: "true"
           DOCKER_API_VERSION: "1.40"
 
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          timeout 120s bash -c '
-            until pg_isready -h postgres -p 5432 -U testuser; do
-              echo "Waiting for PostgreSQL..."
-              sleep 2
-            done
-          '
-        env:
-          PGPASSWORD: testpass # pragma: allowlist secret
-
       - name: Generate test summary
         if: always()
         run: |
@@ -234,7 +223,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:17.5-alpine
+        image: postgres:16-alpine
         env:
           POSTGRES_PASSWORD: testpass # pragma: allowlist secret
           POSTGRES_USER: testuser
