♻️ (ci.yml, e2e-tests.yml): remove redundant Go module caching as `setup-go` action now handles it ♻️ (Taskfile.yml): refactor version parsing to be POSIX compliant and more robust

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -276,10 +276,16 @@ tasks:
           # Remove 'v' prefix if present
           current=${current#v}
 
-          IFS='.' read -ra PARTS <<< "$current"
-          major=${PARTS[0]:-0}
-          minor=${PARTS[1]:-0}
-          patch=${PARTS[2]:-0}
+          # Split version into components using parameter expansion (POSIX compatible)
+          major=${current%%.*}
+          remaining=${current#*.}
+          minor=${remaining%%.*}
+          patch=${remaining#*.}
+
+          # Set defaults if empty
+          major=${major:-0}
+          minor=${minor:-0}
+          patch=${patch:-0}
 
           case "{{.TYPE}}" in
             "major")
