--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: "Run golangci-lint"
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.59
+          version: v2.1.6
           args: --timeout=10m
 
   test:
@@ -111,10 +111,14 @@ jobs:
 
       - name: "Setup test databases"
         run: | # pragma: allowlist secret
-          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres -c "CREATE DATABASE test_source;"
-          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres -c "CREATE DATABASE test_target;"
-          PGPASSWORD=postgres psql -h postgres -U postgres -d test_source -c "CREATE TABLE users (id SERIAL PRIMARY KEY, name VARCHAR(100));"
-          PGPASSWORD=postgres psql -h postgres -U postgres -d test_source -c "INSERT INTO users (name) VALUES ('Alice'), ('Bob'), ('Charlie');"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres \
+            -c "CREATE DATABASE test_source;"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres \
+            -c "CREATE DATABASE test_target;"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d test_source \
+            -c "CREATE TABLE users (id SERIAL PRIMARY KEY, name VARCHAR(100));"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d test_source \
+            -c "INSERT INTO users (name) VALUES ('Alice'), ('Bob'), ('Charlie');"
 
       - name: "Run integration tests"
         run: go test -v -tags=integration ./...
@@ -160,10 +164,14 @@ jobs:
 
       - name: "Setup test databases"
         run: | # pragma: allowlist secret
-          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres -c "CREATE DATABASE e2e_source;"
-          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres -c "CREATE DATABASE e2e_target;"
-          PGPASSWORD=postgres psql -h postgres -U postgres -d e2e_source -c "CREATE TABLE products (id SERIAL PRIMARY KEY, name VARCHAR(100), price DECIMAL(10,2));"
-          PGPASSWORD=postgres psql -h postgres -U postgres -d e2e_source -c "INSERT INTO products (name, price) VALUES ('Widget', 19.99), ('Gadget', 29.99);"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres \
+            -c "CREATE DATABASE e2e_source;"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d postgres \
+            -c "CREATE DATABASE e2e_target;"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d e2e_source \
+            -c "CREATE TABLE products (id SERIAL PRIMARY KEY, name VARCHAR(100), price DECIMAL(10,2));"
+          PGPASSWORD=postgres psql -h postgres -U postgres -d e2e_source \
+            -c "INSERT INTO products (name, price) VALUES ('Widget', 19.99), ('Gadget', 29.99);"
 
       - name: "Run E2E tests"
         run: go test -v -tags=e2e ./...
