--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,13 +111,21 @@ jobs:
 
       - name: "Setup test databases"
         run: | # pragma: allowlist secret
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d postgres \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d postgres \
             -c "CREATE DATABASE test_source;"
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d postgres \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d postgres \
             -c "CREATE DATABASE test_target;"
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d test_source \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d test_source \
             -c "CREATE TABLE users (id SERIAL PRIMARY KEY, name VARCHAR(100));"
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d test_source \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d test_source \
             -c "INSERT INTO users (name) VALUES ('Alice'), ('Bob'), ('Charlie');"
 
       - name: "Run integration tests"
@@ -164,13 +172,21 @@ jobs:
 
       - name: "Setup test databases"
         run: | # pragma: allowlist secret
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d postgres \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d postgres \
             -c "CREATE DATABASE e2e_source;"
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d postgres \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d postgres \
             -c "CREATE DATABASE e2e_target;"
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d e2e_source \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d e2e_source \
             -c "CREATE TABLE products (id SERIAL PRIMARY KEY, name VARCHAR(100), price DECIMAL(10,2));"
-          PGPASSWORD=postgres psql -h localhost -p ${{ job.services.postgres.ports['5432'] }} -U postgres -d e2e_source \
+          PGPASSWORD=postgres psql -h localhost \
+            -p ${{ job.services.postgres.ports['5432'] }} \
+            -U postgres -d e2e_source \
             -c "INSERT INTO products (name, price) VALUES ('Widget', 19.99), ('Gadget', 29.99);"
 
       - name: "Run E2E tests"
