✨ feat: Add schema-only and data-only options to GitHub Action
This commit introduces new `schema-only` and `data-only` inputs to the GitHub Action, allowing users to specify whether to transfer only the schema or only the data during a fork operation.

- **`action.yml`**:
 - Added `schema-only` and `data-only` inputs with boolean types and default `false`.
 - Mapped these new inputs to `PGFORK_SCHEMA_ONLY` and `PGFORK_DATA_ONLY` environment variables.
 - Updated the action description for clarity.
 - Updated author information.

- **`entrypoint.sh`**:
 - Added logic to append `--schema-only` or `--data-only` to the command arguments if the corresponding environment variables are set to `true`.
 - Standardized the `--output-format` flag across all commands.
 - Extended database connection flag handling to `validate` command.
 - Refactored connection flag handling for `cleanup`, `list`, `ps`, and `test-connection` commands to use appropriate flag names (`--host`, `--port`, `--user`, `--database`, `--sslmode`).
 - Corrected `--source-database` flag to `--source-db` for the `fork` command to align with CLI.

- **`cmd/*.go`**:
 - Renamed all instances of `--output` flag to `--output-format` across `branch`, `diff`, `doctor`, `jobs`, `metrics`, `profile`, `status`, `test-connection`, and `version` commands for consistency.

- **`.github/workflows/release.yml`**:
 - Added a new step to update the major version tag (e.g., `v1`) for GitHub Actions. This ensures that users referencing the action by its major version always get the latest patch release.
 - Enhanced the release notification summary to include instructions on how to use the GitHub Action with both exact and major version tags.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -288,6 +288,26 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Update major version tag for GitHub Actions
+        if: needs.version.outputs.is_prerelease == 'false'
+        run: |
+          VERSION="${{ needs.version.outputs.version }}"
+
+          # Extract major version (e.g., v1.2.3 -> v1)
+          MAJOR_VERSION=$(echo "$VERSION" | sed -E 's/^v([0-9]+)\..*/v\1/')
+
+          echo "Creating/updating major version tag: $MAJOR_VERSION"
+
+          # Delete existing major version tag if it exists
+          git tag -d "$MAJOR_VERSION" 2>/dev/null || true
+          git push origin ":refs/tags/$MAJOR_VERSION" 2>/dev/null || true
+
+          # Create new major version tag pointing to this release
+          git tag -f "$MAJOR_VERSION" "$VERSION"
+          git push origin "$MAJOR_VERSION"
+
+          echo "✅ Major version tag $MAJOR_VERSION updated to point to $VERSION"
+
   # Notify on completion
   notify:
     name: Notify Release Completion
@@ -313,4 +333,13 @@ jobs:
             RELEASE_URL="https://github.com/${{ github.repository }}/releases/tag/${{ needs.version.outputs.version }}"
             echo "- [Release Page](${RELEASE_URL})"
             echo "- [Docker Images](https://github.com/${{ github.repository }}/pkgs/container/postgres-db-fork)"
+            echo ""
+            if [ "${{ needs.version.outputs.is_prerelease }}" = "false" ]; then
+              VERSION="${{ needs.version.outputs.version }}"
+              MAJOR_VERSION=$(echo "$VERSION" | sed -E 's/^v([0-9]+)\..*/v\1/')
+              echo "### 🎯 GitHub Actions Usage"
+              echo "Users can now reference this action using:"
+              echo "- \`uses: ${{ github.repository }}@$VERSION\` (exact version)"
+              echo "- \`uses: ${{ github.repository }}@$MAJOR_VERSION\` (major version)"
+            fi
           } >> "$GITHUB_STEP_SUMMARY"
